RESOLVED FIXED153517
[EME][Mac] MediaKeys.createSession() fails with initData containing a contentId whose length is > 1/2 the initData.
https://bugs.webkit.org/show_bug.cgi?id=153517
Summary [EME][Mac] MediaKeys.createSession() fails with initData containing a content...
Jer Noble
Reported 2016-01-26 15:19:44 PST
[EME][Mac] MediaKeys.createSession() fails with initData containing a contentId whose length is > 1/2 the initData.
Attachments
Patch (1.88 KB, patch)
2016-01-26 15:24 PST, Jer Noble
no flags
Jer Noble
Comment 1 2016-01-26 15:22:20 PST
Jer Noble
Comment 2 2016-01-26 15:24:01 PST
Eric Carlson
Comment 3 2016-01-27 13:14:09 PST
Can you add a test for this?
Jer Noble
Comment 4 2016-01-27 13:20:29 PST
Internal, but yes.
WebKit Commit Bot
Comment 5 2016-02-03 14:59:44 PST
Comment on attachment 269935 [details] Patch Clearing flags on attachment: 269935 Committed r196083: <http://trac.webkit.org/changeset/196083>
WebKit Commit Bot
Comment 6 2016-02-03 14:59:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.